# researchmind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py
src/agents/: analyzer.py  batch_analyzer.py  classifier.py  comparison.py  gap_detector.py  report.py  retriever.py
src/api/: server.py
src/graph/: report_graph.py  state.py  workflow.py
src/ingest/: __main__.py  chunker.py  embeddings.py  loader.py  vectorstore.py
src/llm/: llm.py
src/ui/: app.py
