[project]
name = "researchmind"
version = "0.1.0"
description = "Multi-paper research analysis platform with vector search and LLM-powered report generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[tool.setuptools.packages.find]
where = ["src"]
